--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Scroll down to explore more about us</p>
     </div>
      <div class="right-side">
-        <img src="/assets/download.png" alt="profile-pic">
+        <img src="./assets/download.png" alt="profile-pic">
      </div>
     </section>
 </body>
