second section completed

--- a/index.html
+++ b/index.html
@@ -1,34 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Protfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <section class="hero-section">
-     <div class="left-side">
-        <div class="header-text">
-            <h2 class="">Stay Focus on</h2>
-            <h2 class="orange-text">Mission 2025</h2>
+        <div class="left-side">
+            <div class="header-text">
+                <h2 class="">Stay Focus on</h2>
+                <h2 class="orange-text">Mission 2025</h2>
+            </div>
+            <p class="hero-text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+                No duo populo animal noluisse, enim</p>
+            <button class="explore-btn">Explore Now</button>
+            <p>Scroll down to explore more about us</p>
         </div>
-        <p class="hero-text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-    <button class="explore-btn">Explore Now</button> 
-    <p>Scroll down to explore more about us</p>
-    </div>
-     <div class="right-side">
-        <div class="outer-circle">
-            <div class="inner-circle">
-                 <div class="image-wrapper">
-                <img class="" src="./assets/download.png" alt="profile-pic">
-            </div></div>
+        <div class="right-side">
+            <div class="outer-circle">
+                <div class="inner-circle">
+                    <div class="image-wrapper">
+                        <img class="" src="./assets/download.png" alt="profile-pic">
+                    </div>
+                </div>
+            </div>
+
         </div>
-        
-     </div>
+    </section>
+    <section class="second-section">
+        <h2 class="mission-header">My mission in <span class="orange-text">2025</span> </h2>
+        <div class="mission-section">
+            <div class="mission">
+                <img src="./assets/Saly-19.png" alt="icon">
+                <h4>Mission</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+
+            <div class="vision">
+                <img src="./assets/Saly-13.png" alt="icon">
+                <h4>Vission</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+
+            <div class="goals">
+                <img src="./assets/ec119629d4d72d2f2507f1d163937f6b745b1d5c.png" alt="icon">
+                <h4>Goals</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+        </div>
+
+
     </section>
 </body>
+
 </html>
